# actix_web_tokio_postgres_example

./: Cargo.toml  README.md
src/: main.rs
src/apps/: app.rs  mod.rs
src/database/: db.rs  models.rs
src/handlers/: mod.rs  user_handlers.rs
