[package]
name = "actix_web_tokio_postgres_example"
version = "0.1.0"
authors = ["Jacob Lerche <jacob.lerche@gmail.com>"]

[dependencies]
futures = "0.1.25"
env_logger = "*"

actix = "0.7"
actix-web = { version="0.7", default-features = false }

phf = "=0.7.22"
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres.git"}

serde_json = "1.0.28"
serde = "1.0.28"
serde_derive = "1.0.79"
